--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -82,7 +82,7 @@
                             <p class="category"><%= products[index].category %></p>
                             <div class="box-price">
                                 <p class="price">$<%= products[index].price %></p>
-                                <p class="discount"><%= products[index].discount %>%</p>
+                                <p class="discount"><%= products[index].discount %></p>
                             </div>
                             <a href="#">
                                 <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
