--- a/src/views/new-game.ejs
+++ b/src/views/new-game.ejs
@@ -33,10 +33,8 @@
                     <label class="tittle-m block">Edades</label>
                     <select name="ages" class="input-style">
                         <option selected>Todas</option>
-                        <option>Mayores de 8 años</option>
-                        <option>Mayores de 13 años</option>
-                        <option>Mayores de 18 años</option>
-                        <option>Mayores de 21 años</option>
+                        <option>Adolescentes</option>
+                        <option>Adultos</option>
                     </select>
                 </div>
     
