EDIT product list

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -21,27 +21,21 @@
                         </div>
                         <div class="filtros">
                             <h3 class="h3-productlist">Edades</i></h1>
-                            <label>
-                                <input type="checkbox" name="ages"> Todas
+                                <label>
+                                    <input type="checkbox" name="ages"> Todos
                                 </label><br>
                                 <label>
-                                    <input type="checkbox" name="ages"> 8 años a 13 años
+                                    <input type="checkbox" name="ages"> Adolescentes
                                 </label><br>
                                 <label>
-                                    <input type="checkbox" name="ages"> 13 años a 18 años
-                                </label><br>
-                                <label>
-                                    <input type="checkbox" name="ages"> 18 años a 21 años
-                                </label><br>
-                                <label>
-                                    <input type="checkbox" name="ages"> Mayores de 21 años
+                                    <input type="checkbox" name="ages"> Adultos
                                 </label>
                         </div>
                         <div class="filtros">
                             <h3 class="h3-productlist">Categorías</i></h1>
                              <label id=category-option>
                                 <input type="checkbox" name="category-option" class="category-option">Shooter
-                            </label>
+                            </label><br>
             
                             <label id=category-option>
                                 <input type="checkbox" name="category-option" class="category-option">Sports
@@ -49,7 +43,7 @@
             
                             <label id=category-option>
                                 <input type="checkbox" name="category-option" class="category-option">Acción
-                            </label>
+                            </label><br>
             
                             <label id=category-option>
                                 <input type="checkbox" name="category-option" class="category-option">Terror
@@ -57,11 +51,11 @@
             
                             <label id=category-option>
                                 <input type="checkbox" name="category-option" class="category-option">Estrategia
-                            </label>
+                            </label><br>
 
                             <label id=category-option>
                                 <input type="checkbox" name="category-option" class="category-option">Indie
-                            </label>
+                            </label><br>
 
                             <label id=category-option>
                                 <input type="checkbox" name="category-option" class="category-option">Aventura
