--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1442,11 +1442,12 @@ article {
 }
 .product-filter{
     margin: 20px;
+    padding-left: 10px;
     border: solid #00FFF0 1px;
     border-radius: 5px;
     line-height: 1.5em;
     font-size: 0.75em;
-    text-align: center;
+    text-align: left;
 }
 
 .product-list article{
@@ -1498,8 +1499,8 @@ article {
         display: flex;
         justify-content: space-between;
         padding: 15px;
-        margin: auto;
         padding-top: 10px;
+        margin: auto;
         transition: all 1000ms;
     }
 
@@ -1515,6 +1516,7 @@ article {
         .filter{
             display: block;
             transition: all 1000ms;
+            padding: 0px;
         }
         
             .main-productlist{
