--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -42,7 +42,7 @@
                                     <img class="esrb-photo" src="/public/images/ESRB-Mature.png" alt="imagen calificacion"><br>
                                     <% break;
 
-                                    case prduct.age = 'T': %>
+                                    case product.age = 'T': %>
                                     <img class="esrb-photo" src="/public/images/ESRB-Teen.png" alt="imagen calificacion"><br>
                                     <% break;
                                 } %> 
@@ -63,6 +63,7 @@
                         <h4 class="h4-mc">Requisitos del sistema</h4>
                         <div class="requisitos-min">
                                 <p>
+                                    MINIMO:<br>
                                     <%= product.requisitos %>
                                 </p>
                                 
