--- a/src/views/edit-game.ejs
+++ b/src/views/edit-game.ejs
@@ -5,7 +5,7 @@
 
 <body class="body-new-game">
     <main class="container-m">
-        <form action="/products/create" method="POST" class="container-form">
+        <form action=<%= "/products/"+product.id+"/edit" %> method="POST" class="container-form" enctype="multipart/form-data">
             <h1>Editar <%= product.titulo %>  <i class="fas fa-gamepad"></i></h1>
             <div class="contenido-principal"> 
                 <div class="box-container">
