--- a/src/views/new-game.ejs
+++ b/src/views/new-game.ejs
@@ -37,7 +37,26 @@
                         <option>Adultos</option>
                     </select>
                 </div>
+                <div class="box-container">
+                    <label class="block tittle-m" for="interes" name="interes">Plataforma</label>
+                    <div class="box-category">
+                        <label id=category-option>
+                            <input type="checkbox" name="category-option" class="category-option">PS4
+                        </label>
     
+                        <label id=category-option>
+                            <input type="checkbox" name="category-option" class="category-option">PS5
+                        </label>
+    
+                        <label id=category-option>
+                            <input type="checkbox" name="category-option" class="category-option">PC
+                        </label>
+    
+                        <label id=category-option>
+                            <input type="checkbox" name="category-option" class="category-option">XBOX
+                        </label>
+                    </div>
+                </div>
                 <div class="box-container">
                     <label class="block tittle-m" for="interes" name="interes">Categorías</label>
                     <div class="box-category">
@@ -65,28 +84,11 @@
                         </label>
                     </div>
                 </div>
-                <div class="box-container">
-                    <label class="block tittle-m" for="interes" name="interes">Plataforma</label>
-                    <div class="box-category">
-                        <label id=category-option>
-                            <input type="checkbox" name="category-option" class="category-option">PS4
-                        </label>
-    
-                        <label id=category-option>
-                            <input type="checkbox" name="category-option" class="category-option">PS5
-                        </label>
-    
-                        <label id=category-option>
-                            <input type="checkbox" name="category-option" class="category-option">PC
-                        </label>
-    
-                        <label id=category-option>
-                            <input type="checkbox" name="category-option" class="category-option">XBOX
-                        </label>
-                    </div>
-                </div>
+
                 <div class="box-container photo-game">
-                    <label class="block tittle-m" for="photoGame" name="fotoUser">Imagen del VideoJuego</label>
+                    <label class="block tittle-m" for="photoGame" name="fotoUser">Imagen Vertical del VideoJuego</label>
+                    <input class="block" type="file" name="photoGame">
+                    <label class="block tittle-m" for="photoGame" name="fotoUser">Imagen Horizontal del VideoJuego</label>
                     <input class="block" type="file" name="photoGame">
                 </div>
                 <div class="box-container">
