--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -9,7 +9,7 @@
     <main class="main-home">
         <div class="container">
             <div class="lanzamientos">
-                <img class="img-lanzamiento" src="/images/family-disruption1.jpg" alt="Family Disruption">
+                <img class="img-lanzamiento" src="/images/productImages/family-disruption1.jpg" alt="Family Disruption">
             </div>
             <section class="container-bs">
                 <h2 class="tittle">Más Vendidos</h2>
@@ -97,7 +97,7 @@
                             <button class="button-comming">Estreno Noviembre</button>
                         </div>
                     </article>
-                    <article class="game 6">
+                    <article class="game game6">
                         <div class="container-img">
                             <img class="imagen" src="/images/residentevil.png" alt="Resident Evil 8">
                         </div>
